--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
       <h1>Hello,</br> I'm Nurwahyuni Syamsul</h1>
       <p><span class="typed" data-typed-items="An Information System Student, Lab Assistant, Community Secretary"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/wahyunee?igsh=M2xweHZqYXd1eW85 " class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurwahyuni-syamsul-668b9a281/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -385,11 +384,9 @@
       <h3>Nurwahyuni Syamsul</h3>
       <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/wahyunee?igsh=M2xweHZqYXd1eW85 " class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/nurwahyuni-syamsul-668b9a281/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
