--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Public Speaking <i class="val">80%</i></span>
+              <span class="skill">Public Speaking <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Leadership <i class="val">90%</i></span>
+              <span class="skill">Leadership <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -233,12 +233,12 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Sekretaris Himpunan Mahasiswa Sistem Informasi</h4>
+              <h4>Secretary of the Information Systems Student Association</h4>
               <h5>2022* (currently)</h5>
               <p><em>Institut Teknologi PLN, Jakarta</em></p>
             </div>
             <div class="resume-item">
-              <h4>Asisten Laboratorium Software Architecture and Quality</h4>
+              <h4>Assistant of Software Architecture and Quality Laboratory</h4>
               <h5>2022* (currently)</h5>
               <p><em>Institut Teknologi PLN, Jakarta</em></p>
             </div>
